logs/mobility/build.make.165.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doFreeMovementStuff()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:730:1: error: break statement not within loop or switch
 break;
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:732:1: error: case label ‘SearchController::REACHED_GOAL_PAUSE’ not within a switch statement
 case (SearchController::REACHED_GOAL_PAUSE):
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:745:1: error: break statement not within loop or switch
 break;
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:747:1: error: case label ‘SearchController::REACHED_GOAL’ not within a switch statement
 case (SearchController::REACHED_GOAL):
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:762:1: error: break statement not within loop or switch
 break;
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: At global scope:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:767:1: error: expected declaration before ‘}’ token
 }//end doFreeMovementStuff
 ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
